--- a/index.html
+++ b/index.html
@@ -568,6 +568,22 @@
 
         <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
           <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="testimonial-item">
+                <img src="assets/img/testimonials/testimonials-4.jpeg" class="testimonial-img" alt="">
+                <h3>Malu Thankachan</h3>
+                <h4>Assistant Professor at Nirmala College Mulanthuruthy</h4>
+                <p>
+                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  I want to take the time to look back on a truly awesome student that I had the pleasure of meeting during my time teaching at Nirmala Arts And Science College. 
+He was an advanced level student and love programming language a lot. 
+I really admired him for the active role both in studies and other department activities. He had a goal and he didn’t lose sight of it, not even once.  
+He is just one of the many people who really put their mind to something and make it happen. He was always focused and ready to make his dream come true. 
+Hopefully he will also serve inspiration for those upcoming generation.
+                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                </p>
+              </div>
+            </div>-
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -608,18 +624,8 @@
               </div>
             </div><!-- End testimonial item -->
 
-            <!-- <div class="swiper-slide">
-              <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                <h3>Matt Brandon</h3>
-                <h4>Freelancer</h4>
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-              </div>
-            </div>- End testimonial item -->
+            
+             <!-- End testimonial item -->
 
             <!-- <div class="swiper-slide">
               <div class="testimonial-item">
