--- a/index.html
+++ b/index.html
@@ -685,43 +685,46 @@ Hopefully he will also serve inspiration for those upcoming generation.
           <div class="col-lg-8 mt-5 mt-lg-0">
 
             
-            <form action="\" id="submit-form" class="form" method="POST" >
+            <form action="https://script.google.com/macros/s/AKfycbxNbhZW0Cse2l3tm7vaf1vqQ2Mh1c1Vs0XuIgRiTdsl1Dyr-5ygz_lOXAy4S0zsO-Le/exec"  id="gform" class="form" method="POST" >
               <div class="row" style="margin: 20px;">
                 <div class=" form-details ">
                   <input type="text" name="name" class="form-control" id="names" placeholder="Your Name" >
-                  <i class="fas fa-exclamation-circle"></i>
-                  <i class="fas fa-check-circle"></i>
-                  <small>Error message</small>
+
+                  <p id="name-error">The name field can't be empty</p>
+                  <i id ="name-correct"class="fas fa-check-circle"></i>
+
+
+
 
                 </div>
               </div>
               <div class="row" style="margin: 20px;">
                 <div class=" form-details ">
                   <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" >
-                  <i class="fas fa-exclamation-circle"></i>
-                  <i class="fas fa-check-circle"></i>
-                  <small>Error message</small>
+
+                  <p id="email-error">Please use valid eg: email@abcd.com </p>
+
                 </div>
               </div>
               <div class="row" style="margin: 20px;"> 
                 <div class=" form-details">
                   <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" >
-                  <i class="fas fa-exclamation-circle"></i>
-                  <i class="fas fa-check-circle"></i>
-                  <small>Error message</small>
+
+                  <p id="subject-error">This field can't be empty</p>
+
                 </div>
               </div>
               <div class="row" style="margin: 20px;">
                 <div class=" mt-2 form-details" >
                   <textarea class="form-control" name="message" id="message"  rows="5" placeholder="Message"></textarea>
-                  <i class="fas fa-exclamation-circle"></i>
-                  <i class="fas fa-check-circle"></i>
-                  <small>Error message</small>
+
+                  <p id="message-error">This field can't be empty</p>
+
 
                 </div>
               </div>
 
-              <div class="text-center"><button class type="submit" value="submit">Send Message</button></div>
+              <div class="text-center"><button class type="submit" id="form-button" value="submit">Send Message</button></div>
             </form>
             
 
