--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@ Hopefully he will also serve inspiration for those upcoming generation.
           <div class="col-lg-8 mt-5 mt-lg-0">
 
             
-            <form action="https://script.google.com/macros/s/AKfycbxNbhZW0Cse2l3tm7vaf1vqQ2Mh1c1Vs0XuIgRiTdsl1Dyr-5ygz_lOXAy4S0zsO-Le/exec"  id="gform" class="form" method="POST" >
+            <form action=""  id="gform" class="form" method="POST" >
               <div class="row" style="margin: 20px;">
                 <div class=" form-details ">
                   <input type="text" name="name" maxlength="18" class="form-control" id="names" placeholder="Your Name" >
